...


        val context = LocalContext.current
        val email = remember { mutableStateOf(TextFieldValue()) }
        val emailErrorState = remember { mutableStateOf(false) }
        val passwordErrorState = remember { mutableStateOf(false) }
        val password = remember { mutableStateOf(TextFieldValue()) }
        val displayName = remember { mutableStateOf(TextFieldValue()) }
        val displayNameErrorState = remember { mutableStateOf(false) }

        val topColor = Color(0xFF00EEFF)

        val bottomColor = primaryColor
...
                            disabledIndicatorColor = Transparent,
                            unfocusedIndicatorColor = Transparent,
                            backgroundColor = Transparent,
                        ),
                        modifier = Modifier
                            .height(60.dp)
                            .weight(1f).semantics { testTag = "username" },
                        placeholder = {
                            Text(
                                "Email",
                                color = White,
                                fontSize = textNormal,
                                modifier = Modifier.alpha(0.5f)
...
                                color = primaryColor,
                                modifier = Modifier.padding(5.dp)
                            )
                        },
                        modifier = Modifier
                            .fillMaxWidth()
                            .height(60.dp).semantics { testTag = "login" },
                        background = White
                    )
                    Spacer(Modifier.padding(cardPadding))
                    Text(
                        text = "Don't have an account?",
                        fontSize = textNormal,
...
