...
                                    onValueChange = {
                                        viewModel.name = it
                                    },
                                    isError = viewModel.confirmed && viewModel.name.isEmpty(),
                                    modifier = Modifier
                                        .weight(1f).semantics {
                                                              testTag = "name"
                                        },
                                    colors = TextFieldDefaults.textFieldColors(
                                        focusedIndicatorColor = Transparent,
                                        disabledIndicatorColor = Transparent,
                                        unfocusedIndicatorColor = Transparent,
                                        backgroundColor = Transparent,
...
                                        fontWeight = FontWeight.Bold,
                                        fontSize = textHeading,
                                        textAlign = TextAlign.Center
                                    ),
                                    keyboardOptions = KeyboardOptions(capitalization = KeyboardCapitalization.Sentences)
                                )
                                Button(modifier = Modifier.semantics { testTag = "confirm" }, background = Transparent, onClick = {
                                    viewModel.save()
                                }) {
                                    FaIcon(
                                        FaIcons.Check,
                                        tint = White
                                    )
...
                                            viewModel.description = it
                                        },
                                        isError = viewModel.confirmed && viewModel.description.isEmpty(),
                                        shape = RoundedCornerShape(cardRadius),
                                        modifier = Modifier
                                            .fillMaxWidth().semantics {
                                                testTag = "description"
                                            },
                                        colors = TextFieldDefaults.textFieldColors(
                                            focusedIndicatorColor = Transparent,
                                            disabledIndicatorColor = Transparent,
                                            unfocusedIndicatorColor = Transparent,
                                            backgroundColor = colors.background,
...
                                            onClick = { viewModel.locationSelection = true },
                                            border = if (viewModel.confirmed) BorderStroke(
                                                2.dp,
                                                danger
                                            ) else null,
                                            modifier = Modifier.padding(10.dp).semantics {
                                                testTag = "main"
                                            }
                                        ) {
                                            Row {
                                                if (viewModel.locationSelection) {
                                                    CircularProgressIndicator(color = colors.surface)
                                                } else {
...
                        ""
                    } else {
                        it
                    }
                },
                modifier = Modifier.fillMaxWidth().semantics {
                    testTag = "tag"
                },
                colors = TextFieldDefaults.textFieldColors(
                    focusedIndicatorColor = Transparent,
                    disabledIndicatorColor = Transparent,
                    unfocusedIndicatorColor = Transparent,
                    backgroundColor = Transparent,
...
