...
            modifier = Modifier
                .align(Alignment.TopCenter)
                .fillMaxWidth()
                .padding(vertical = cardPadding * 2, horizontal = cardPadding)
        ) {
            Row {
                IconButton(modifier = Modifier.semantics{testTag = "back"},onClick = { onBack() }) {
                    FaIcon(FaIcons.ArrowLeft, tint = colors.surface)
                }
                TextField(
                    keyboardOptions = KeyboardOptions(imeAction = ImeAction.Search, capitalization = KeyboardCapitalization.Sentences),
                    keyboardActions = KeyboardActions(
                        onSearch = { viewModel.search(viewModel.searchTerm);keyboardController?.hide() }),

                    value = viewModel.searchTerm, onValueChange = { viewModel.searchTerm = it },
                    shape = RoundedCornerShape(cardRadius),
                    modifier = Modifier
                        .weight(1f).semantics { testTag = "searchText"},
                    colors = TextFieldDefaults.textFieldColors(
                        focusedIndicatorColor = Transparent,
                        disabledIndicatorColor = Transparent,
                        unfocusedIndicatorColor = Transparent,
                        backgroundColor = colors.onBackground,
                    ),
...
                                            stringResource(R.string.set_main),
                                            fontSize = textNormal,
                                            color = White
                                        )
                                    }
                                    Button(
                                        modifier = Modifier.semantics { testTag = "add" },
                                        onClick = {
                                            onAddStep(item)
                                            viewModel.stepAdded = true
                                        },
                                        background = if (viewModel.stepAdded) success else colors.onSurface
                                    ) {
...
