...
    <string name="visit_duration">Visit duration (min)</string>
    <string name="know_place_write">If you know the place, write a note</string>
    <string name="top_ratings">Top ratings</string>
    <string name="days">Days</string>
    <string name="discussion">Discussion</string>
    <string name="new_message">New message</string>
    <string name="not_enough_info">Some required fields is not filled up</string>
    <string name="select">Select</string>
    <string name="wanna_leave">Do you want to exit without saving?</string>
    <string name="untitled">Untitled</string>
    <string name="no_result">Ops, no result</string>
    <string name="unnamed">No name</string>
</resources>
